force-app/main/default/objects/Repository__c/Repository__c.object-meta.xml
<CustomObject>
    <label>Repository</label>
    <pluralLabel>Repositories</pluralLabel>
    <nameField>
        <label>Repository Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Represents a source code repository from any provider</description>
</CustomObject>