force-app/main/default/objects/Repository__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Enable or disable synchronization for this repository</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>