force-app/main/default/objects/Repository__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>External ID</label>
    <description>External system repository ID (e.g., GitHub repository ID)</description>
    <type>Text</type>
    <length>100</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>