force-app/main/default/objects/Repository__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <label>Last Sync Date</label>
    <description>Date/time of last successful synchronization</description>
    <type>DateTime</type>
</CustomField>