force-app/main/default/objects/Repository__c/fields/Last_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Status__c</fullName>
    <label>Last Sync Status</label>
    <description>Status of the last synchronization attempt</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>