force-app/main/default/objects/Repository__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Repository Owner</label>
    <description>Organization or user that owns the repository</description>
    <type>Text</type>
    <length>100</length>
</CustomField>