force-app/main/default/objects/Repository__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <description>Source control provider</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GitHub</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>GitLab</fullName>
            </value>
            <value>
                <fullName>Azure DevOps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>