force-app/main/default/objects/Repository__c/fields/Repository_URL__c.field-meta.xml
<CustomField>
    <fullName>Repository_URL__c</fullName>
    <label>Repository URL</label>
    <description>Direct URL to the repository</description>
    <type>Url</type>
</CustomField>